# matter

./: .docker-compose.yml  .env  .gitattributes  .gitignore  COPYING  Cargo.toml  Dockerfile  LICENSE  NHdb.pm  NetHack.pm  NetHack2.pm  README  README.md  TODO  _dockercg1-nhdb.yml  aliases  clean-docker.sh  combotrack.pl  datasafe.pl  docker-cg1.yml  docker-compose.yml  dockercg1-nhdb.yml  example.txt  firsts.pl  formatmulti-combo.txt  formatmulti.txt  gamedeleteupdate.pl  init-cfg-postgres.sh  init.sh  kizul.json  lock  mojo-stub.pl  multistreak.pl  multistreaks.html  nethack_def.json  nethack_def.txt  nhdb-feeder.pl  nhdb-stats.pl  nhdb_def.json  old_init.sh  (+9 more)
NetHack/: Config.pm  Variant.pm
cfg/: logging.conf  nethack_def.json  nhdb_def.json  nhdb_def.json.example
cpan/: build.sh
css/: about.css
defs/: _00_init_users.sh  _auth.json  _init-nhdb.sh  _mounts.conf  _nhdb-feeder.sh  _nhdb-init.sh  _nhdb-mojo.sh  _nhdb-stats.sh  _nhdb_def.json  nethack_def.json  nhdb_def.json.example  preproc.env  setup_def.sh
doc/: servers.txt
docker/: README.md
feeder/: Dockerfile  build.sh  env  init.sh  run.sh
js/: countdown.js  tabsort-dev.js  tabsort.js
legacy/: Dockerfile  cpanfile  devnul06-fixer.pl  init.sh
lib/: NHS.pm  NHdb.pm  NetHackStats.pm
mojo/: Dockerfile  binary-deps  build.sh  init.sh  run.sh
postgres/: Dockerfile  build.sh  default-env  init.sh  reset-pw.sh  run.sh
public/: about.css  ascended.html  favicon.psd  main.css  realtime-ref.html  realtime.html
run/: .oldREADME.md  nhdb-stats.pl
schema/: 10_translations.sql  30_logfiles.sql  games.sql  (+14 more)
(+131 files in other folders)
