[package]
name = "actix-rest"
version = "0.1.0"
authors = ["Joanna Doyle <jjadoyle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
postgres = { version = "0.19.0", features = ["with-serde_json-1", "with-time-0_2"] }
serde_json = "1"
time = { version = "0.2.25", features = ["serde"] }